--- a/index.html
+++ b/index.html
@@ -4,58 +4,62 @@
   <meta charset="UTF-8" />
   <title>Be My Valentine 💖</title>
   <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: 'Segoe UI', sans-serif;
-    }
- 
-    .card {
-      background: #fff;
-      padding: 30px 40px;
-      border-radius: 18px;
-      text-align: center;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.15);
-      max-width: 360px;
-    }
- 
-    .card img {
-      width: 140px;
-      margin-bottom: 15px;
-    }
- 
-    h2 {
-      margin-bottom: 25px;
-      color: #333;
-    }
- 
-    .buttons {
-      position: relative;
-      height: 55px;
-    }
- 
-    button {
-      padding: 10px 26px;
-      border-radius: 22px;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-    }
- 
-    #yesBtn {
-      background: #ff4d6d;
-      color: #fff;
-    }
- 
-    #noBtn {
-      position: absolute;
-      background: #e0e0e0;
-      left: 140px;
-    }
+     body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    font-family: 'Segoe UI', sans-serif;
+  }
+
+  .card {
+    background: #fff;
+    padding: 25px 20px;
+    border-radius: 16px;
+    text-align: center;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    max-width: 320px;
+    width: 90%;
+  }
+
+  .card img {
+    width: 120px;
+    margin-bottom: 15px;
+  }
+
+  h2 {
+    margin-bottom: 25px;
+    font-size: 20px;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    position: relative;
+  }
+
+  button {
+    padding: 10px 22px;
+    border-radius: 20px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  #yesBtn {
+    background: #ff4d6d;
+    color: #fff;
+    z-index: 2;
+  }
+
+  #noBtn {
+    background: #ddd;
+    position: relative;
+    z-index: 1;
+  }
   </style>
 </head>
 <body>
@@ -74,32 +78,40 @@
       <button id="noBtn">No</button>
     </div>
   </div>
- 
-  <script>
-    const noBtn = document.getElementById("noBtn");
-    const yesBtn = document.getElementById("yesBtn");
- 
-    noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 220 - 110;
-      const y = Math.random() * 120 - 60;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    });
- 
-    yesBtn.addEventListener("click", () => {
-      document.body.innerHTML = `
-        <div style="
-          height:100vh;
-          display:flex;
-          align-items:center;
-          justify-content:center;
-          background:linear-gradient(135deg,#ff9a9e,#fad0c4);
-          font-family:Segoe UI;
-          text-align:center;">
-          <h1>Yayyyy! 🐻💕<br>Bubu & Dudu approve this Valentine 😍</h1>
-        </div>
-      `;
-    });
-  </script>
+<script>
+  const noBtn = document.getElementById("noBtn");
+  const yesBtn = document.getElementById("yesBtn");
+
+  function moveNoButton() {
+    const x = Math.random() * 200 - 100;
+    const y = Math.random() * 120 - 60;
+    noBtn.style.transform = `translate(${x}px, ${y}px)`;
+  }
+
+  // Desktop
+  noBtn.addEventListener("mouseover", moveNoButton);
+
+  // Mobile
+  noBtn.addEventListener("touchstart", moveNoButton);
+
+  yesBtn.addEventListener("click", () => {
+    document.body.innerHTML = `
+      <div style="
+        height:100vh;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        background:linear-gradient(135deg,#ff9a9e,#fad0c4);
+        font-family:Segoe UI;
+        text-align:center;
+        padding:20px;">
+        <h1>Yayyyy! 💕<br>You just made me the happiest person 😍</h1>
+      </div>
+    `;
+  });
+</script>
+
  
 </body>
 </html>
+
