--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    background: #161bad69;
     font-family: 'Segoe UI', sans-serif;
   }
 
@@ -114,4 +114,5 @@
  
 </body>
 </html>
+
 
